Fixed bug #3328: Block with editing icons should be shown without text when under 350px wide. Fixed bug #5029: Layout problems with small columns and dark background
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1648 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_advanced.css
+++ b/feeditadvanced/res/css/fe_edit_advanced.css
@@ -397,7 +397,7 @@ div.feEditAdvanced-contentWrapper .formsOnPage {
 
 .feEditAdvanced-hiddenElement,
 .hidden .formsOnPage {
-	background-color: #bbb !important;
+	opacity: 0.6;
 }
 
 .feEditAdvanced-label,
@@ -412,6 +412,16 @@ input.feEditAdvanced-editButton,
 	font-size: 11px;
 	color: #646;
 }
+
+div.feEditAdvanced-contentWrapperSmall input.feEditAdvanced-editButton {
+	width: 20px;
+	text-indent: 20px;
+	padding-left: 0;
+	padding-right: 0;
+	background-position: 0px 50%;
+}
+
+div.feEditAdvanced-contentWrapperSmall div.feEditAdvanced-editPanelDiv { min-width: 170px; }
 
 .feEditAdvanced-label {
 	font-weight: bold;
@@ -473,13 +483,8 @@ input.feEditAdvanced-editButton.downAction {
 	padding: 2px 3px 0 25px;
 }
 
-.doCut {
-	background-color: #f8e0e0;
-}
-
-.doCopy {
-	background-color: #d8f0d8;
-}
+.doCut { background-color: #f8e0e0; }
+.doCopy { background-color: #d8f0d8; }
 
 div.feEditAdvanced-contentWrapper form.typo3-editPanel {
 	float: right;
